# CrossBLAS

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
cmake/: Config.cmake  Config.cmake.in  PlatformSpecificSettings.cmake
tests/: CMakeLists.txt  runtest.cmake
